Remove chagne to .row { text-align } that hasn't been tested (might be part of a fix   for an issue in Firefox)

--- a/iui/iui.css
+++ b/iui/iui.css
@@ -267,8 +267,7 @@ body > .panel {
     min-height: 42px;
     border-bottom: 1px solid #999999;
     -webkit-border-radius: 0;
-//    text-align: right;
-    text-align: left;
+    text-align: right;
 }
 
 fieldset > .row:last-child {
